--- a/views/manageUsers/manageUser.ejs
+++ b/views/manageUsers/manageUser.ejs
@@ -30,7 +30,9 @@
                     <h3>Manage User</h3>
                 </div>
                     <div class="card-body">
-
+                        <div class="row m-2 float-right">
+                            <a class="btn btn-outline-primary" href="/createUser"><i class="ik ik-plus"></i> Add User</a>
+                        </div>
                         <div class="table-responsive">
                             <table class="table table-bordered">
                                 <thead>
