--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -22,6 +22,22 @@
                 </li>
 
             </ul>
+            <ul class="list-unstyled navbar__list">
+                <li class="active has-sub">
+                    <a class="js-arrow" href="#">
+                        <i class="fas fa-tachometer-alt"></i>Manage Students</a>
+                    <ul class="list-unstyled navbar__sub-list js-sub-list">
+                        <li>
+                            <a href="/createStudent">Add Student</a>
+                        </li>
+                        <li>
+                            <a href="manageStudents">Manage Student</a>
+                        </li>
+
+                    </ul>
+                </li>
+
+            </ul>
             
         </nav>
     </div>
