--- a/views/manageStudents/addStudent.ejs
+++ b/views/manageStudents/addStudent.ejs
@@ -30,7 +30,7 @@
                     <div class="container-fluid">
                         <div class="card">
                             <div class="card-header bg-info">
-                                <h3>Add User</h3>
+                                <h3>Add Student</h3>
                             </div>
                             <form method="post" action="/createStudent">
                                 <div class="card-body">
