--- a/views/manageStudents/editStudent.ejs
+++ b/views/manageStudents/editStudent.ejs
@@ -32,37 +32,37 @@
                             <form method="post" action="/editStudent">
                                 <div class="card-body">
                                     <div class="card-header bg-info">
-                                        <h3>Edit User</h3>
+                                        <h3>Edit Student</h3>
                                     </div>
                                     <div class="form-row">
                                         <div class="form-group col">
                                             <label>First Name</label>
-                                            <input name="_id" id="_id" type="hidden" value="<%- user._id %>">
+                                            <input name="_id" id="_id" type="hidden" value="<%- student._id %>">
                                             <input class="form-control" type="text" name="FirstName"
-                                                   placeholder="First Name"  value="<%- user.FirstName %>" required>
+                                                   placeholder="First Name"  value="<%- student.FirstName %>" required>
                                         </div>
 
                                         <div class="form-group col">
                                             <label>Last Name</label>
                                             <input class="form-control" type="text" name="LastName"
-                                                   placeholder="Last Name" value="<%- user.LastName %>" required>
+                                                   placeholder="Last Name" value="<%- student.LastName %>" required>
                                         </div>
                                     </div>
                                     <div class="form-row">
                                         <div class="form-group col">
                                             <label>EmailID</label>
                                             <input class="form-control" type="text" name="EmailID"
-                                                   placeholder="EmailID" value="<%- user.EmailID %>" required>
+                                                   placeholder="EmailID" value="<%- student.EmailID %>" required>
                                         </div>
 
                                         <div class="form-group col">
                                             <label>Contact</label>
                                             <input class="form-control" type="text" name="ContactNumber"
-                                                   placeholder="Contact Number" value="<%- user.ContactNumber %>"  required>
+                                                   placeholder="Contact Number" value="<%- student.ContactNumber %>"  required>
                                         </div>
                                     </div>
                                     <div class="form-row">
-                                        <button class="btn btn-primary mx-auto" type="submit"><i class="fa-fa-save"></i>Update User </button>
+                                        <button class="btn btn-primary mx-auto" type="submit"><i class="fa-fa-save"></i>Update student </button>
                                     </div>
                                 </div>
                             </form>
